--- a/src/static/css/base.scss
+++ b/src/static/css/base.scss
@@ -4,6 +4,7 @@
 @import "preloader.scss";
 @import "typography.scss";
 @import "forms.scss";
+@import "icons.css";
 @import "layout.scss";
 @import "header.scss";
 @import "footer.scss";
