--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -23,7 +23,7 @@
 	<!-- CSS -->
 	<link href="{{assets}}/css/styles.min.css" rel="stylesheet">
 	<link href="{{assets}}/img/favicon.ico" rel="shortcut icon" type="image/ico" />
-	<script src="https://use.fontawesome.com/3ca1480440.js"></script>
+	<!--<script src="https://use.fontawesome.com/3ca1480440.js"></script>-->
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -41,9 +41,9 @@
 	</script>
 </head>
 <body>
-	<section id="preloader2">
+	{{!-- <section id="preloader2">
 		<div class="site-spinner"></div>
-	</section>
+	</section> --}}
 	{{> body }}
 	<!-- Our JavaScript -->
 	<script src="{{assets}}/js/app.js"></script>
