--- a/src/templates/pages/onepage.hbs
+++ b/src/templates/pages/onepage.hbs
@@ -7,20 +7,23 @@ layout: default.hbs
 {{> partial-header }}
 <main>
 	{{!-- {{> partial-streamer }} --}}
-	{{> partial-products }}
 	{{!-- {{> partial-about }} --}}
-	{{> partial-visual }}
+	{{!-- {{> partial-visual }}
 	{{> partial-products }}
-	{{!-- {{> partial-pricelist }} --}}
-	{{> partial-visual }}
+	{{> partial-pricelist }}
+	{{> partial-visual }} --}}
+	{{> partial-single }}
 	{{> partial-gallery }}
-	{{> partial-streamer }}
-	{{> partial-content }}
+	{{> partial-single }}
 	{{> partial-visual }}
-	{{> partial-video }}
-	{{> partial-address }}
-	{{> partial-contactform }}
+	{{> partial-streamer }}
+	{{!-- {{> partial-pricelist }} --}}
+	{{!-- {{> partial-content }} --}}
 
+	{{!-- {{> partial-video }} --}}
+	{{> partial-address }}
+	{{!-- {{> partial-contactform }} --}}
+	{{!-- {{> partial-visual }} --}}
 </main>
 {{> partial-footer }}
 
