--- a/src/templates/partials/partial-about.hbs
+++ b/src/templates/partials/partial-about.hbs
@@ -1,48 +1,68 @@
 <section class="section section-line about">
-    <div class="container">
-            {{!-- <div class="row">
-                <div class="col-sm-12 text-center">
-                    <h2 class="h2">Surf up.</h2>
-                </div>
-            </div> --}}
-            <div class="row">
-                <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 column">
-                    <h3 class="h3">Vind jouw Brainwash kappers.</h3>
-                    {{!-- <p class="paragraph">
-                        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur vel illum qui dolorem eum fugiat quo reprehenderit qui in dignissim qui blandit ea voluptate velit esse quam suscipit lobortis nisldolore eu feugiat praesent luptatum nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril.
-                    </p> --}}
-                </div>
-                <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 column">
-                    <h3 class="h3">Wassen, knippen, drogen altijd € 17,50</h3>
-                    {{!-- <p class="paragraph">
-                        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur vel illum qui dolorem eum fugiat quo reprehenderit qui in dignissim qui blandit ea voluptate velit esse quam suscipit lobortis nisldolore eu feugiat praesent luptatum nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril.
-                    </p> --}}
-                </div>
-                <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 column">
-                    <h3 class="h3">Naar de kapper zonder afspraak</h3>
-                    {{!-- <p class="paragraph">
-                        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur vel illum qui dolorem eum fugiat quo reprehenderit qui in dignissim qui blandit ea voluptate velit esse quam suscipit lobortis nisldolore eu feugiat praesent luptatum nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril.
-                    </p> --}}
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0">
-                    <hr>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-0 column">
-                    <h2 class="h2">About me.</h2>
-                    <p class="paragraph">
-                        Wat hebben een fiets, huisgemaakte taartjes en Italiaanse espresso gemeen? Mogador! Deze koffiebar aan de Botermarkt heet iedereen welkom om de lekkerste koffie te proberen. Echte koffie fijnproevers kunnen hier hun hart ophalen, want de koffie komt van Bocca. Deze ongebrande ‘groene’ koffie uit Ethiopië, Brazilië of Indonesië wordt plaatselijk in Dronten gebrand en hier geserveerd.
-                    </p>
-                    <p class="paragraph">Het interieur van Mogador is warm en huiselijk. Je kunt er kunst kopen en zelfs een fixed bike. Het ligt er maar net aan wat er ten tijde aan de muur hangt. Er zijn 18 zitplaatsen en het is er de hele dag door gezellig druk. </p>
-                    <a href="#" class="button">Checkout</a>
-                </div>
+	<div class="container">
+		{{!-- <div class="row">
+			<div class="col-sm-12 text-center">
+				<h2 class="h2">Surf up.</h2>
+			</div>
+		</div> --}}
+		
+		{{!-- <div class="row">
+			<div class="col-xs-10 col-xs-offset-1 col-md-12 col-md-offset-0">
+				<hr>
+			</div>
+		</div> --}}
+		<div class="row">
+			<div class="col-xs-10 col-xs-offset-1">
+				<h2 class="h2">I design meaningful visual identities and authentic digital experiences.</h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-1">
+				<div class="img-container img-ratio-1-1 illustration"><img src="https://static1.squarespace.com/static/57813ef759cc687a7d606e9c/t/57968ebd29687f433936510d/1469484738126/?format=500w" class="img-responsive"></div>
+			</div>
+			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-0">
+				
+				<p class="paragraph">
+					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
+				</p>
+			</div>
 
-                <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-0">
-                    <div class="img-container img-ratio-1-1 illustration"><img src="http://dummyimage.com/600x600/eee/fff.png" class="img-responsive img-circle"></div>
-                </div>
-            </div>
-        </div>
-    </section>
+			
+		</div>
+	</div>
+</section>
+<section class="section">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-1">
+				<div class="img-container img-ratio-1-1 illustration">
+					<img src="assets/img/watch.jpg" class="img-responsive">
+				</div>
+			</div>
+			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-0">
+				<h2 class="h2">Detailed Analytics.<small>Search Engine</small></h2>
+				<p class="paragraph">
+					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
+				</p>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="section section-grey">
+	<div class="container">
+		<div class="row">
+			
+			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-0 text-center">
+				<h2 class="h2">Affordable prices.<small>Select something that suits you.</small></h2>
+				<p class="paragraph">
+					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
+				</p>
+			</div>
+			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-1">
+				<div class="img-container img-ratio-1-1 illustration">
+					<img src="assets/img/watch.jpg" class="img-responsive">
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
