--- a/src/templates/partials/partial-contactform.hbs
+++ b/src/templates/partials/partial-contactform.hbs
@@ -1,8 +1,8 @@
-<section class="section section-2">
+<section class="section section-dark">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2 class="h2">Wanna say hello?<small>Drop by or drop us a line.</small></h2>
+				<h2 class="h2">Say hi<small>Drop by or drop us a line.</small></h2>
 			</div>
 		</div>
 		<div class="row">
