--- a/src/templates/partials/partial-gallery.hbs
+++ b/src/templates/partials/partial-gallery.hbs
@@ -2,38 +2,37 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 text-center">
-				<h2 class="h2">Gallery.<small>Checkout our latest products.</small></h2>
+				<h2 class="h2">Gallery{{!-- .<small>Checkout our latest products.</small> --}}</h2>
 			</div>
-		</div>
-	</div>
-	<div class="container-fluid">
+		</div>	
 		<div class="row">
-			<div class="col-xs-6 col-md-3 no-padding">
+			<div class="col-xs-6 col-sm-4 gallery-item">
 				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="assets/img/{{site.category}}/1.jpg" class="img-responsive lazyload"></div></a>
 			</div>
-			<div class="col-xs-6 col-md-3 no-padding">
+			<div class="col-xs-6 col-sm-4 gallery-item">
 				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="assets/img/{{site.category}}/2.jpg" class="img-responsive lazyload"></div></a>
 			</div>
-			<div class="col-xs-6 col-md-3 no-padding">
+			<div class="col-xs-6 col-sm-4 gallery-item">
 				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="assets/img/{{site.category}}/3.jpg" class="img-responsive lazyload"></div></a>
 			</div>
-			<div class="col-xs-6 col-md-3 no-padding">
+			<div class="col-xs-6 col-md-4 gallery-item">
 				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="assets/img/{{site.category}}/4.jpg" class="img-responsive lazyload"></div></a>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-6 col-md-3 no-padding">
+			<div class="col-xs-6 col-md-4 gallery-item">
 				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="assets/img/{{site.category}}/5.jpg" class="img-responsive lazyload"></div></a>
 			</div>
-			<div class="col-xs-6 col-md-3 no-padding">
-				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="assets/img/{{site.category}}/7.jpg" class="img-responsive lazyload"></div></a>
-			</div>
-			<div class="col-xs-6 col-md-3 no-padding">
+			<div class="col-xs-6 col-md-4 gallery-item">
 				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="assets/img/{{site.category}}/6.jpg" class="img-responsive lazyload"></div></a>
 			</div>
-			<div class="col-xs-6 col-md-3 no-padding">
-				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="http://dummyimage.com/800x600/eee/fff.png" class="img-responsive lazyload"></div></a>
+			<div class="col-xs-6 col-md-4 gallery-item">
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="assets/img/{{site.category}}/7.jpg" class="img-responsive lazyload"></div></a>
+			</div>
+			<div class="col-xs-6 col-md-4 gallery-item">
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="assets/img/{{site.category}}/8.jpg" class="img-responsive lazyload"></div></a>
+			</div>
+			<div class="col-xs-6 col-md-4 gallery-item">
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here"><div class="img-container img-ratio-4-3"><img src="/assets/img/pixel.gif" data-src="assets/img/{{site.category}}/9.jpg" class="img-responsive lazyload"></div></a>
 			</div>
 		</div>
-	</div>
+	
 </section>
