--- a/src/static/css/buttons.scss
+++ b/src/static/css/buttons.scss
@@ -14,9 +14,9 @@
 	transition: all 0.2s ease-in-out 0s;
 	font-family: $font-1;
 	border-width: 2px;
-	border-color: $color-1;
+	border-color: $link-color;
 	border-style: solid;
-	background: $color-1;
+	background: $link-color;
 	color: #fff;
 
 	
@@ -27,7 +27,7 @@
 
 	&:hover{
 		background: #fff;
-		color: $color-1;
+		color: $link-color;
 		padding: 25px 50px;
 	}
 
@@ -46,6 +46,10 @@
 		border-radius: 35px;
 	}
 
+	&-small{
+		font-size: 12px;
+	}
+
 	&-margin-left{
 		margin-left: 10px;
 	}
@@ -54,6 +58,18 @@
 		font-weight: normal;
 		margin-right: 5px;
 		line-height: 0;
+	}
+
+	&-white, &-white:visited, &-white:active{
+		background-color: #fff;
+		color: $link-color;
+		border-width: 2px;
+		border-color: #fff;
+
+		&:hover{
+			background-color: #fff;
+			// color: $link-color;
+		}
 	}
 
 	&-outline-white{
@@ -65,17 +81,22 @@
 
 		&:hover{
 			background-color: #fff;
-			color: $color-1;
+			color: $link-color;
 		}
 	}
 }
 
 .back-to-top{
-	background-color: $section-color;
+	background-color: $color-3;
 	width: 100%;
 	border: none;
-	color: $color-1;
+	color: $link-color;
 	padding: 20px 0;
 	line-height: 1;
 	font-size: 20px;
+
+	&:hover{
+		background-color: $link-color;
+		color: $color-3;
+	}
 }
