--- a/src/static/css/footer.scss
+++ b/src/static/css/footer.scss
@@ -1,6 +1,6 @@
 footer{
 	background: $color-3;
-	padding: 100px 0;
+	padding: 100px 0 80px;
 	color: $color-4;
 	font-size: 14px;
 	font-family: $font-1;
