--- a/src/static/css/header.scss
+++ b/src/static/css/header.scss
@@ -17,7 +17,7 @@
 	color: #fff;
 	font-size: $font-logo-size;
 	font-family: $font-logo;
-	padding: 25px 0;
+	margin: 25px 0;
 	line-height: 1;
 	white-space: nowrap;
 
@@ -27,10 +27,30 @@
 
 	@media all and(max-width: $breakpoint-tablet){
 		font-size: $font-logo-size-mobile;
-		padding-top: 30px;
+		margin-top: 30px;
 	}
 	@media all and(max-width: $breakpoint-tablet){
 		// font-size: 25px;
+	}
+
+	& img{
+		max-width: 200px;
+	}
+}
+
+.img-logo{
+	width: 100%;
+	max-width: 30vw;
+	@media all and(max-width: $breakpoint-tablet){
+		max-width: 50vw;
+	}
+}
+
+.container-fluid .logo{
+	margin-left: 30px;
+
+	@media all and(max-width: $breakpoint-tablet){
+		margin-left: 15px;
 	}
 }
 
@@ -98,7 +118,7 @@
 	@media all and(max-width: $breakpoint-tablet){
 		display: none;
 		position: fixed;
-		margin: 0;
+		margin: 0 !important;
 		padding: 0;
 		left: 0;
 		right: 0;
@@ -140,17 +160,24 @@
 	}
 }
 
+.container-fluid .navbar{
+	margin-right: 30px;
+}
+
 .toggle-nav{
 	// background: red;
 	background: none;
 	border: none;
 	position: absolute;
-	padding: 10px;
-	line-height: 0;
 	top: 15px;
+	right: 20px;
+	// padding: 10px;
+	line-height: 0;
 	font-weight: normal;
-	right: 15px;
-	font-size: 30px;
+	font-size: 35px;
+	text-align: center;
+	width: 50px;
+	height: 50px;
 	display: none;
 
 	@media all and(max-width: $breakpoint-tablet){
@@ -162,13 +189,13 @@
 // HERO SECTION
 
 .hero{
-	background: #fff url(../img/hero.jpg) no-repeat center center fixed;
+	background: #fff url(../img/hero.jpg) no-repeat center top fixed;
 	background-size: cover;
-	min-height: 500px;
+	// min-height: 500px;
 	position: relative;
 	overflow: hidden;
 	width: 100%;
-	height: 75vh;
+	height: $hero-height;
 	font-family: $font-1;
 	color: #fff;
 	text-shadow: 0px 0px 10px rgba(0,0,0,0.2);
@@ -176,11 +203,13 @@
 	@media all and(max-width: $breakpoint-tablet){
 		background-attachment: scroll; 
 	}
+	
+
 
 	&-overlay:before{
 		content: "";
 		display: block;
-		background-color: rgba(50,50,50,0.5);
+		background-color: rgba(50,50,50,0.6);
 		position: absolute;
 		left: 0;
 		right: 0;
@@ -199,7 +228,7 @@
 		right: 0;
 		bottom: 0;
 		top: 0;
-		mix-blend-mode: multiply;
+		mix-blend-mode: saturation;
 	}
 
 	&-inner{
@@ -233,6 +262,7 @@
 		font-weight: 700;
 		margin-bottom: 30px;
 		text-transform: uppercase;
+		color: $color-1;
 
 		@media all and(max-width: $breakpoint-mobile){
 			font-size: 14px;
@@ -298,6 +328,16 @@
 			bottom: 0;
 			top: 0;
 		}
+	}
+
+	& .button-more{
+		position: absolute;
+		bottom: 8vh;
+		left: 50%;
+		z-index: 10;
+		-ms-transform: translate(-50%, 0%);
+		-webkit-transform: translate(-50%, 0%);
+		transform: translate(-50%, 0%);
 	}
 }
 
