--- a/src/static/css/hero.scss
+++ b/src/static/css/hero.scss
@@ -54,7 +54,7 @@
 	
 	background-size: cover;
 	// color: #fff;
-	height: 75vh;
+	height: 100%;
 	min-height: 600px;
 	padding: 0;
 	position: relative;
