--- a/src/static/css/typography.scss
+++ b/src/static/css/typography.scss
@@ -5,7 +5,7 @@ body, html{
 	cursor: default;
 	background: #fff;
 	font-weight: 400;
-	font-size: 16px;
+	font-size: $font-size;
 	font-family: $font-2;
 	color: $color-2;
 	height: 100%;
@@ -27,10 +27,10 @@ a{
 
 	&:hover{
 		text-decoration: none;
-		color: $color-1;
+		color: $link-color;
 	}
 
-	color: $color-1;
+	color: $link-color;
 }
 
 
@@ -39,17 +39,30 @@ a{
 	font-family: $font-1;
 	color: $color-2;
 	font-weight: 700;
-	font-size: 36px;
+	font-size: 32px;
 	margin-top: 0;
-	margin-bottom: 40px;
+	line-height: 1.4;
+	letter-spacing: 3px;
+	margin-bottom: 50px;
 	text-transform: uppercase;
 
 	& small{
 		display: block;
 		font-family: $font-2;
 		color: $color-1;
+		font-size: 15px;
 		text-transform: none;
-		margin: 15px 0 70px;
+		margin: 15px 0 0;
+		letter-spacing: 1px;
+	}
+
+	&:after{
+		display: block;
+		content: "";
+		width: 50px;
+		height: 3px;
+		background-color: $color-2;
+		margin-top: 30px;
 	}
 
 	@media all and(max-width: $breakpoint-mobile){
@@ -57,7 +70,27 @@ a{
 	}
 }
 
-.section-2{
+.text-center h2:after{
+	margin: 30px auto 0;
+}
+
+.text-right h2:after{
+	margin: 30px 0 0 calc(100% - 50px);
+	// float: right;
+}
+
+.section-grey{
+
+	// .h2{
+	// 	color: $alt-color-1;
+
+	// 	& small{
+	// 		color: $alt-color-2;
+	// 	}
+	// }
+}
+
+.section-dark{
 
 	.h2{
 		color: $alt-color-1;
@@ -109,11 +142,11 @@ a{
 
 .streamer{
 	background: $streamer-bg-color;
-	padding: 50px 0;
+	padding: 70px 0;
 	color:$streamer-text-color;
 	font-family: $font-1;
-	font-weight: 700;
-	font-size: 26px;
+	font-weight: 400;
+	font-size: 20px;
 
 	& .button-inline{
 		margin-left: 10px;
@@ -198,6 +231,7 @@ hr{
 		margin: 0 0 15px;
 		padding: 0;
 		font-size: 14px;
+		font-family: $font-2;
 		
 	}
 	& li{
