--- a/src/templates/partials/partial-address.hbs
+++ b/src/templates/partials/partial-address.hbs
@@ -2,13 +2,13 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2 class="h2">Contact.</h2>
+				<h2 class="h2">Visit us</h2>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center">
 				<div class="icon"><i class="fa fa-map-o" aria-hidden="true"></i></div>
-				<h4 class="h4">Adres</h4>
+				<h4 class="h4">Address</h4>
 				<p class="paragraph">Gasthuisstraat 48, 2011 XP Haarlem, The Netherlands
 				</p>
 			</div>
