--- a/src/templates/partials/partial-pricelist.hbs
+++ b/src/templates/partials/partial-pricelist.hbs
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 text-center">
-				<h2 class="h2">Prices.<small>Checkout our latest products.</small></h2>
+				<h2 class="h2">Prices{{!-- <small>Checkout our latest products.</small> --}}</h2>
 			</div>
 		</div>
 		<div class="row">
@@ -24,7 +24,7 @@
 						<li><strong>Unlimited</strong> Bandwidth</li>
 						<li><strong>24/7</strong> Support</li>
 					</ul>
-					<a href="#" class="button button-rounded">Download</a>
+					<a href="#" class="button button-small button-rounded">Download</a>
 				</div>
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 column">
@@ -45,7 +45,7 @@
 						<li><strong>Unlimited</strong> Bandwidth</li>
 						<li><strong>24/7</strong> Support</li>
 					</ul>
-					<a href="#" class="button button-rounded">Download</a>
+					<a href="#" class="button button-small button-rounded">Download</a>
 				</div>
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 column">
@@ -66,7 +66,7 @@
 						<li><strong>Unlimited</strong> Bandwidth</li>
 						<li><strong>24/7</strong> Support</li>
 					</ul>
-					<a href="#" class="button button-rounded">Download</a>
+					<a href="#" class="button button-small button-rounded">Download</a>
 				</div>
 			</div>
 		</div>
