--- a/src/templates/partials/partial-products.hbs
+++ b/src/templates/partials/partial-products.hbs
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 text-center">
-				<h2 class="h2">Producten.<small>Wij gebruiken alleen de beste producten.</small></h2>
+				<h2 class="h2">Products.<small>We only use the best.</small></h2>
 			</div>
 		</div>
 		<div class="row">
