--- a/src/templates/partials/partial-streamer.hbs
+++ b/src/templates/partials/partial-streamer.hbs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 text-center">
-                <p class="first">Wassen, knippen, drogen altijd € 17,50 {{!-- <a href="#" class="button button-outline-white button-inline">Email us</a> --}}</p>
+                <p class="first">"Lorem ipsum dolor sit amet, consectetur adipiscing elit" {{!-- <a href="#" class="button button-outline-white button-inline">Email us</a> --}}</p>
                 {{!-- <p class="small">"Someone's Name"</p> --}}
                 
             </div>
