--- a/src/templates/partials/partial-visual.hbs
+++ b/src/templates/partials/partial-visual.hbs
@@ -1,1 +1,9 @@
-<div class="visual-bar visual-bar--fixed visual-bar--blend2" style="background-image: url(http://www.kcms.sk/all-images/hairstyles-for-women.jpg)"></div>
+<div class="visual-bar visual-bar-fixed visual-bar-noblend" style="background-image: url(assets/img/visual.jpg)">
+    <div class="container visual-bar-inner">
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1 text-center">
+                 {{!-- <p>Some of my recent projects</p> --}}
+            </div>
+        </div>
+    </div>
+</div>
