--- a/src/templates/partials/partial-header.hbs
+++ b/src/templates/partials/partial-header.hbs
@@ -36,11 +36,11 @@
 
 	{{!-- IF SLIDESHOW --}}
 
-	{{!-- <div class="background_cycler">
+	<div class="background_cycler">
 		<div class="slide-1 active" style="background-image: url(assets/img/01.jpg);"></div>
 		<div class="slide-2" style="background-image: url(assets/img/02.jpg);"></div>
 		<div class="slide-3" style="background-image: url(assets/img/03.jpg);"></div>
-	</div> --}}
+	</div>
 
 	{{!-- If client has video --}}
 	{{!-- <div class="hero-video">
