--- a/src/static/css/buttons.scss
+++ b/src/static/css/buttons.scss
@@ -94,6 +94,10 @@
 	padding: 20px 0;
 	line-height: 1;
 	font-size: 20px;
+	-webkit-transition: all 0.2s ease-in-out 0s;
+	-moz-transition: all 0.2s ease-in-out 0s;
+	-o-transition: all 0.2s ease-in-out 0s;
+	transition: all 0.2s ease-in-out 0s;
 
 	&:hover{
 		background-color: $link-color;
