--- a/src/static/css/footer.scss
+++ b/src/static/css/footer.scss
@@ -2,12 +2,11 @@ footer{
 	background: $color-3;
 	padding: 100px 0 80px;
 	color: $color-4;
-	font-size: 14px;
+	font-size: 11px;
 	font-family: $font-1;
 	font-weight: 400;
 
 	@media all and(max-width: $breakpoint-mobile){
-		font-size: 11px;
 		padding: 50px 0;
 	}
 
@@ -22,7 +21,7 @@ footer{
 
 	& .social{
 		list-style-type: none;
-		margin: 30px 0 0;
+		margin: 0 0 30px;
 		padding: 0;
 		letter-spacing: none;
 		font-size: 0px;
@@ -46,7 +45,7 @@ footer{
 
 				&:hover{
 					background: $color-4;
-					color: $color-1;
+					color: $color-3;
 				}
 			}
 		}
