--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -554,12 +554,11 @@ footer {
   background: #eef4f4;
   padding: 100px 0 80px;
   color: #1f2232;
-  font-size: 14px;
+  font-size: 11px;
   font-family: "Montserrat", serif;
   font-weight: 400; }
   @media all and (max-width: 767px) {
     footer {
-      font-size: 11px;
       padding: 50px 0; } }
   footer p {
     line-height: 2;
@@ -568,7 +567,7 @@ footer {
     color: #1f2232; }
   footer .social {
     list-style-type: none;
-    margin: 30px 0 0;
+    margin: 0 0 30px;
     padding: 0;
     letter-spacing: none;
     font-size: 0px; }
@@ -589,7 +588,7 @@ footer {
         text-align: center; }
         footer .social li a:hover {
           background: #1f2232;
-          color: #1f2232; }
+          color: #eef4f4; }
 
 .button {
   padding: 25px 40px;
@@ -659,7 +658,11 @@ footer {
   color: #2d3a3a;
   padding: 20px 0;
   line-height: 1;
-  font-size: 20px; }
+  font-size: 20px;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  -moz-transition: all 0.2s ease-in-out 0s;
+  -o-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s; }
   .back-to-top:hover {
     background-color: #2d3a3a;
     color: #eef4f4; }
@@ -745,7 +748,6 @@ footer {
     width: 100%; }
 
 .gallery .img-container {
-  margin-bottom: 30px;
   background: #1f2232; }
   .gallery .img-container:before {
     content: "\f002";
@@ -780,6 +782,12 @@ footer {
   -ms-transform: scale(1.2, 1.2);
   -webkit-transform: scale(1.2, 1.2);
   transform: scale(1.2, 1.2); }
+.gallery .gallery-item {
+  margin-bottom: 30px; }
+  @media all and (max-width: 767px) {
+    .gallery .gallery-item {
+      padding: 0;
+      margin-bottom: 0px; } }
 
 .visual-bar {
   height: 50vh;
