--- a/src/static/css/footer.scss
+++ b/src/static/css/footer.scss
@@ -7,7 +7,7 @@ footer{
 	font-weight: 400;
 
 	@media all and(max-width: $breakpoint-mobile){
-		padding: 50px 0;
+		padding: 50px 0 30px;
 	}
 
 	& p{
